--- a/ui/main_windows.ui
+++ b/ui/main_windows.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>1029</width>
-    <height>600</height>
+    <height>798</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -829,18 +829,87 @@
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <layout class="QHBoxLayout" name="horizontalLayout_9">
+                   <layout class="QHBoxLayout" name="horizontalLayout_5">
+                    <property name="spacing">
+                     <number>5</number>
+                    </property>
+                    <property name="leftMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
                     <item>
-                     <widget class="QLabel" name="label">
-                      <property name="text">
-                       <string>TextLabel</string>
+                     <widget class="QFrame" name="cam1_frame">
+                      <property name="styleSheet">
+                       <string notr="true">QFrame{
+	border: 2px solid green;
+}
+</string>
                       </property>
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
+                      </property>
+                      <layout class="QVBoxLayout" name="verticalLayout_9">
+                       <item>
+                        <widget class="QLabel" name="cam1_label">
+                         <property name="font">
+                          <font>
+                           <pointsize>18</pointsize>
+                          </font>
+                         </property>
+                         <property name="styleSheet">
+                          <string notr="true">color: rgb(255, 255, 255);
+border: None;</string>
+                         </property>
+                         <property name="text">
+                          <string>Camera1</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="cam1_display">
+                         <property name="styleSheet">
+                          <string notr="true">border-radius: 10px;
+border: 2px solid red;</string>
+                         </property>
+                         <property name="text">
+                          <string>TextLabel</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <spacer name="verticalSpacer_2">
+                         <property name="orientation">
+                          <enum>Qt::Vertical</enum>
+                         </property>
+                         <property name="sizeHint" stdset="0">
+                          <size>
+                           <width>20</width>
+                           <height>615</height>
+                          </size>
+                         </property>
+                        </spacer>
+                       </item>
+                      </layout>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QLabel" name="label_5">
-                      <property name="text">
-                       <string>TextLabel</string>
+                     <widget class="QFrame" name="cam2_frame">
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
                       </property>
                      </widget>
                     </item>
