--- a/ui/main_windows.ui
+++ b/ui/main_windows.ui
@@ -809,18 +809,21 @@
                  <enum>QFrame::Raised</enum>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_7">
+                 <property name="spacing">
+                  <number>15</number>
+                 </property>
                  <item>
                   <widget class="QFrame" name="preview_frame">
                    <property name="minimumSize">
                     <size>
                      <width>0</width>
-                     <height>700</height>
+                     <height>600</height>
                     </size>
                    </property>
                    <property name="maximumSize">
                     <size>
                      <width>16777215</width>
-                     <height>700</height>
+                     <height>600</height>
                     </size>
                    </property>
                    <property name="frameShape">
@@ -895,7 +898,7 @@ border: 2px solid red;</string>
                          <property name="sizeHint" stdset="0">
                           <size>
                            <width>20</width>
-                           <height>615</height>
+                           <height>515</height>
                           </size>
                          </property>
                         </spacer>
@@ -924,6 +927,46 @@ border: 2px solid red;</string>
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_10">
+                    <property name="spacing">
+                     <number>5</number>
+                    </property>
+                    <property name="leftMargin">
+                     <number>15</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>5</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>15</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>10</number>
+                    </property>
+                    <item>
+                     <widget class="QLabel" name="notification_lb">
+                      <property name="font">
+                       <font>
+                        <pointsize>14</pointsize>
+                        <italic>false</italic>
+                       </font>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">color: rgb(255, 255, 255);</string>
+                      </property>
+                      <property name="text">
+                       <string>Notification</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QListWidget" name="notification_widget">
+                      <property name="styleSheet">
+                       <string notr="true"/>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                 </layout>
